result/HTML/doc3.htm.err
./test/HTML/doc3.htm:5: error: Misplaced DOCTYPE declaration
<!-- END Naviscope Javascript --><!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//E
                                 ^
./test/HTML/doc3.htm:47: error: htmlParseEntityRef: expecting ';'
 href="http://ads.gamesquad.net/addclick.exe/adclick.cgi?REGION=game|tech|ent&i
                                                                              ^
./test/HTML/doc3.htm:47: error: htmlParseEntityRef: expecting ';'
_top"><img src="http://ads.gamesquad.net/addclick.exe/adcycle.cgi?group=52&medi
                                                                              ^
./test/HTML/doc3.htm:47: error: htmlParseEntityRef: expecting ';'
><img src="http://ads.gamesquad.net/addclick.exe/adcycle.cgi?group=52&media=1&i
                                                                              ^
./test/HTML/doc3.htm:140: error: error parsing attribute name
                        width=70 Gentus?.?></A><BR><A 
                                       ^
./test/HTML/doc3.htm:143: error: Unexpected end tag : p
  </P></TD></TR></TBODY></TABLE></CENTER></TD></TR></TBODY></TABLE></CENTER></P
                                                                              ^
./test/HTML/doc3.htm:231: error: Unexpected end tag : font
            Specials<BR><BR></FONT></A><BR></FONT></A><B><FONT color=yellow 
                                                  ^
./test/HTML/doc3.htm:231: error: Unexpected end tag : a
            Specials<BR><BR></FONT></A><BR></FONT></A><B><FONT color=yellow 
                                                      ^
./test/HTML/doc3.htm:742: error: htmlParseEntityRef: expecting ';'
er=0 alt="Advertisement" src="http://ads.adflight.com/ad_static.asp?pid=2097&si
                                                                              ^
./test/HTML/doc3.htm:742: error: htmlParseEntityRef: expecting ';'
Advertisement" src="http://ads.adflight.com/ad_static.asp?pid=2097&sid=1881&asi
                                                                              ^
./test/HTML/doc3.htm:742: error: Unexpected end tag : li
light.com/ad_static.asp?pid=2097&sid=1881&asid=7708"></a></IFRAME></CENTER></LI
                                                                              ^
./test/HTML/doc3.htm:742: error: Unexpected end tag : font
om/ad_static.asp?pid=2097&sid=1881&asid=7708"></a></IFRAME></CENTER></LI></FONT
                                                                              ^
./test/HTML/doc3.htm:742: error: Unexpected end tag : p
=7708"></a></IFRAME></CENTER></LI></FONT></TD></TR></TBODY></TABLE></CENTER></P
                                                                              ^
./test/HTML/doc3.htm:767: error: Opening and ending tag mismatch: font and form
            archive</A></FONT> </FORM></CENTER></TD></TR></TBODY></TABLE><!--		
                              ^
./test/HTML/doc3.htm:767: error: Opening and ending tag mismatch: center and font
            archive</A></FONT> </FORM></CENTER></TD></TR></TBODY></TABLE><!--		
                                               ^
./test/HTML/doc3.htm:767: error: Opening and ending tag mismatch: td and font
            archive</A></FONT> </FORM></CENTER></TD></TR></TBODY></TABLE><!--		
                                                    ^
./test/HTML/doc3.htm:767: error: Opening and ending tag mismatch: tr and font
            archive</A></FONT> </FORM></CENTER></TD></TR></TBODY></TABLE><!--		
                                                         ^
./test/HTML/doc3.htm:767: error: Opening and ending tag mismatch: tbody and font
            archive</A></FONT> </FORM></CENTER></TD></TR></TBODY></TABLE><!--		
                                                                 ^
./test/HTML/doc3.htm:767: error: Opening and ending tag mismatch: table and font
            archive</A></FONT> </FORM></CENTER></TD></TR></TBODY></TABLE><!--		
                                                                         ^
./test/HTML/doc3.htm:790: error: Unexpected end tag : iframe
							document.write("42DF8478957377></IFRAME>");
                                               ^
./test/HTML/doc3.htm:798: error: End tag : expected '>'
							document.write("DF8478957377></SC");
                                        ^
./test/HTML/doc3.htm:798: error: Unexpected end tag : sc
							document.write("DF8478957377></SC");
                                        ^
./test/HTML/doc3.htm:806: error: Unexpected end tag : a
							document.write("ype=gif&size=100x90></A>");
                                               ^
./test/HTML/doc3.htm:810: error: Opening and ending tag mismatch: b and noscript
            <B><NOSCRIPT></B><A 
                             ^
./test/HTML/doc3.htm:815: error: Unexpected end tag : a
            </A></A></B><B></NOSCRIPT></B><B><!-- END GoTo.com Search Box --></
                    ^
./test/HTML/doc3.htm:815: error: Opening and ending tag mismatch: noscript and b
            </A></A></B><B></NOSCRIPT></B><B><!-- END GoTo.com Search Box --></
                                      ^
./test/HTML/doc3.htm:821: error: Opening and ending tag mismatch: form and center
            </FORM><!-- Pricewatch Search Box --><A 
                   ^
./test/HTML/doc3.htm:828: error: Unexpected end tag : p
            Special<BR>Code:BP6-hd</FONT></A> </P></CENTER></TD></TR></TBODY></
                                                  ^
./test/HTML/doc3.htm:828: error: Opening and ending tag mismatch: td and form
            Special<BR>Code:BP6-hd</FONT></A> </P></CENTER></TD></TR></TBODY></
                                                                ^
./test/HTML/doc3.htm:828: error: Opening and ending tag mismatch: tr and form
            Special<BR>Code:BP6-hd</FONT></A> </P></CENTER></TD></TR></TBODY></
                                                                     ^
./test/HTML/doc3.htm:828: error: Opening and ending tag mismatch: tbody and form
            Special<BR>Code:BP6-hd</FONT></A> </P></CENTER></TD></TR></TBODY></
                                                                             ^
./test/HTML/doc3.htm:828: error: Opening and ending tag mismatch: table and form
        Special<BR>Code:BP6-hd</FONT></A> </P></CENTER></TD></TR></TBODY></TABL
                                                                              ^
./test/HTML/doc3.htm:834: error: Unexpected end tag : p
width="100%">&nbsp;</TD></TR></TBODY></TABLE></P></CENTER></TR></TBODY></TABLE>
                                                 ^
./test/HTML/doc3.htm:834: error: Opening and ending tag mismatch: center and form
width="100%">&nbsp;</TD></TR></TBODY></TABLE></P></CENTER></TR></TBODY></TABLE>
                                                          ^
./test/HTML/doc3.htm:834: error: Opening and ending tag mismatch: tr and form
width="100%">&nbsp;</TD></TR></TBODY></TABLE></P></CENTER></TR></TBODY></TABLE>
                                                               ^
./test/HTML/doc3.htm:834: error: Opening and ending tag mismatch: tbody and form
width="100%">&nbsp;</TD></TR></TBODY></TABLE></P></CENTER></TR></TBODY></TABLE>
                                                                       ^
./test/HTML/doc3.htm:834: error: Opening and ending tag mismatch: table and form
width="100%">&nbsp;</TD></TR></TBODY></TABLE></P></CENTER></TR></TBODY></TABLE>
                                                                              ^
./test/HTML/doc3.htm:835: error: Opening and ending tag mismatch: td and form
<CENTER></CENTER></TD></TR><TR><TD COLSPAN="3" VALIGN="TOP" 
                      ^
./test/HTML/doc3.htm:835: error: Opening and ending tag mismatch: tr and form
<CENTER></CENTER></TD></TR><TR><TD COLSPAN="3" VALIGN="TOP" 
                           ^
./test/HTML/doc3.htm:836: error: Opening and ending tag mismatch: table and form
HEIGHT="70">&nbsp;</TD> </TR></TABLE>
                                    ^
./test/HTML/doc3.htm:844: error: Opening and ending tag mismatch: div and form
,arial">Site design by Tim Brinkley</FONT>		</TD>	</TR> --></TBODY></TABLE></DI
                                                                              ^
./test/HTML/doc3.htm:846: error: Opening and ending tag mismatch: body and form
</BODY></HTML>
       ^
./test/HTML/doc3.htm:846: error: Opening and ending tag mismatch: html and form
</BODY></HTML>
             ^
